--- a/app/templates/display.html
+++ b/app/templates/display.html
@@ -68,6 +68,7 @@
     <div class="button-container">
         <button><a href="/">Tải ảnh khác</a></button>
         <button onclick="saveToFile()">Lưu file result.md</button>
+        <button id="saveToObsidian">Lưu vào Obsidian</button>
       </div>
 
 
